// Vitest Snapshot v1

exports[`Message > :props > :closeBtn is a function, () => VNode. 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  >
    <b
      class="t-message-close-content"
    >
      x
    </b>
  </span>
</div>
`;

exports[`Message > :props > :closeBtn is a string, equal "关闭". 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  >
    关闭
  </span>
</div>
`;

exports[`Message > :props > :closeBtn is true, render default close button. 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  >
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`Message > :props > :default is a function, () => <b>这是重要信息</b> 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
      fill="currentColor"
    />
  </svg>
  <b>
    这是重要信息
  </b>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :default is a string, 这是普通信息 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
      fill="currentColor"
    />
  </svg>
  这是普通信息
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :icon is a function, () => MoreIcon 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-more"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M10.5 3h3v3h-3V3zm0 7.5h3v3h-3v-3zm0 7.5h3v3h-3v-3z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :icon is false 1`] = `
<div
  class="t-message t-is-info"
>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 2`] = `
<div
  class="t-message t-is-success"
>
  <svg
    class="t-icon t-icon-check-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 3`] = `
<div
  class="t-message t-is-warning"
>
  <svg
    class="t-icon t-icon-error-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 4`] = `
<div
  class="t-message t-is-error"
>
  <svg
    class="t-icon t-icon-error-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 5`] = `
<div
  class="t-message t-is-question"
>
  <svg
    class="t-icon t-icon-help-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23a11 11 0 100-22 11 11 0 000 22zm-.17-11.11c.43-.53.97-.97 1.4-1.32A2 2 0 0012 7a2 2 0 00-1.89 1.33l-.33.95L7.9 8.6l.34-.94a4 4 0 116.24 4.47 7 7 0 00-1.1 1.01c-.27.34-.37.61-.37.85v1.25h-2V14c0-.87.39-1.57.83-2.11zM11 18.25v-2h2v2h-2z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 6`] = `
<div
  class="t-message t-is-loading"
>
  <div
    class="t-loading--center t-size-m t-loading"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      size="medium"
      version="1.1"
      viewBox="0 0 12 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="0"
        y="0"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
  </div>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > pure message contains two classes 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23a11 11 0 100-22 11 11 0 000 22zM11 8.5v-2h2v2h-2zm2 1.5v7.5h-2V10h2z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > <slot> > <icon> 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-more"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M10.5 3h3v3h-3V3zm0 7.5h3v3h-3v-3zm0 7.5h3v3h-3v-3z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;
